--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sched?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=salasana
 
 #
 #spring.datasource.url= jdbc:postgresql://localhost:5432/sched
