--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-security.oauth2.client.clientId=502687382833-p2853rraahqvslrhauq3j0jgsos6crpm.apps.googleusercontent.com
-security.oauth2.client.clientSecret=q8Me4R1UMHL-ZBzBj4cPhKMT
-security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v3/token
-security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/auth
-security.oauth2.client.tokenName=oauth_token
-security.oauth2.client.authenticationScheme=query
-security.oauth2.client.clientAuthenticationScheme=form
-security.oauth2.client.scope: profile
-security.oauth2.resource.userInfoUri=https://www.googleapis.com/userinfo/v2/me
-security.oauth2.resource.prefer-token-info=false
+#security.oauth2.client.clientId=502687382833-p2853rraahqvslrhauq3j0jgsos6crpm.apps.googleusercontent.com
+#security.oauth2.client.clientSecret=q8Me4R1UMHL-ZBzBj4cPhKMT
+#security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v3/token
+#security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/auth
+#security.oauth2.client.tokenName=oauth_token
+#security.oauth2.client.authenticationScheme=query
+#security.oauth2.client.clientAuthenticationScheme=form
+#security.oauth2.client.scope: profile
+#security.oauth2.resource.userInfoUri=https://www.googleapis.com/userinfo/v2/me
+#security.oauth2.resource.prefer-token-info=false
