--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.datasource.password=postgres
 #security.oauth2.client.scope: profile
 #security.oauth2.resource.userInfoUri=https://www.googleapis.com/userinfo/v2/me
 #security.oauth2.resource.prefer-token-info=false
+
+#security.jwt.token.secret-key:secret-key
