UserController and Dao now support adding roles to users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #spring.datasource.password=salasana
 
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/sched4
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=password
 
 #security.oauth2.client.clientId=502687382833-p2853rraahqvslrhauq3j0jgsos6crpm.apps.googleusercontent.com
 #security.oauth2.client.clientSecret=q8Me4R1UMHL-ZBzBj4cPhKMT
